--- a/web-application/src/main/resources/static/style.css
+++ b/web-application/src/main/resources/static/style.css
@@ -34,28 +34,6 @@ select, input[type="text"] {
     transform: translateY(0);
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-}
-
-table, th, td {
-    border: 1px solid #ddd;
-}
-
-th {
-    background-color: #f2f2f2;
-    color: #333;
-}
-
-th, td {
-    padding: 12px;
-    text-align: left;
-}
-
 #message {
     margin-top: 20px;
     color: red;
@@ -65,9 +43,6 @@ th, td {
 }
 
 #loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
@@ -76,7 +51,33 @@ th, td {
     align-items: center;
     font-size: 2em;
     color: #000;
-    z-index: 1000;
+}
+
+.table-container {
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: white;
+}
+
+.table-custom-scroll {
+    overflow-y: hidden;
+}
+
+.table-custom-scroll::-webkit-scrollbar {
+    width: 12px;
+}
+
+.table-custom-scroll::-webkit-scrollbar-track {
+    background: #f4f4f9;
+    border-radius: 10px;
+}
+
+.table-custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 3px solid #f4f4f9;
 }
 
 .pagination-container {
@@ -87,4 +88,64 @@ th, td {
 
 #next-page-button {
     margin-left: auto;
+}
+
+.btn-group .btn {
+    margin-right: 5px;
+}
+
+.btn-group .btn:last-child {
+    margin-right: 0;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn-success {
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+.action-button {
+    display: flex;
+    gap: 5px;
+}
+
+.action-button button {
+    flex: 1;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 14px;
+}
+
+.table-custom-scroll {
+    overflow-y: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f4f4f9;
+}
+
+.table-custom-scroll::-webkit-scrollbar {
+    width: 12px;
+}
+
+.table-custom-scroll::-webkit-scrollbar-track {
+    background: #f4f4f9;
+    border-radius: 10px;
+}
+
+.table-custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 3px solid #f4f4f9;
+}
+
+.table-custom-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
 }
